# reckoner

./: .gitignore  README  SConstruct
client/: SConscript
client/src/: client.cpp
cmake/modules/: CopyHeaders.cmake  FindENet.cmake
common/: SConscript
common/src/: quick.cpp
gateway/: .gitignore  Makefile  rkgate.config  sandbox.erl
gateway/ebin/: rkgate.app
gateway/include/: rkgate_util.hrl
gateway/src/: rkgate_app.erl  rkgate_conn.erl  rkgate_conn_sup.erl  rkgate_listener.erl  rkgate_login.erl  rkgate_mongo.erl  rkgate_sup.erl  rkgate_util.erl
reckoner/: CMakeLists.txt
reckoner/client/: CMakeLists.txt
reckoner/client/src/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  client.cpp  testclient.cpp
reckoner/common/: CMakeLists.txt
reckoner/common/include/: reckoner_misc.hpp
reckoner/common/proto/: CMakeLists.txt
reckoner/common/src/: ENetEndpoint.cpp  ENetEndpoint.hpp  Messages.hpp  Reckoner.hpp
reckoner/common/src/framework/: Listeners.hpp  WorldObject.hpp
reckoner/common/src/ships/: Ship.hpp  ShipMovement.cpp  ShipMovement.hpp
reckoner/server/: CMakeLists.txt
reckoner/server/include/: clientlist.hpp  reckoner.hpp
reckoner/server/src/: Client.cpp  Client.hpp  ClientList.cpp  ClientList.hpp  Server.cpp  Server.hpp  client.cpp  server.cpp
server/: SConscript
server/include/: client.hpp
server/src/: clientlist.cpp  server.cpp
space/: README
space/cmake/modules/: FindProtobuf.cmake
space/src/: CMakeLists.txt
space/src/reckoner/client/: Connection.cpp
space/src/reckoner/common/: ENetEndpoint.cpp  Reckoner.hpp  Region.cpp  vectormath.hpp
space/src/reckoner/common/framework/: Listeners.hpp
space/src/reckoner/proto/: CMakeLists.txt  region.proto
space/src/reckoner/server/: CMakeLists.txt  Client.hpp
space/src/reckoner/server/framework/: ServerObject.hpp
src/: CMakeLists.txt
src/reckoner/client/: CMakeLists.txt  Connection.cpp  Connection.hpp  testclient.cpp
src/reckoner/common/: CMakeLists.txt  ENetEndpoint.cpp  ENetEndpoint.hpp  Reckoner.hpp  ReckonerTypes.hpp  Region.cpp  Region.hpp
src/reckoner/common/framework/: Component.hpp  Listeners.hpp  Math2D.hpp  Noncopyable.hpp  WorldObject.hpp
src/reckoner/proto/: CMakeLists.txt  login.proto
src/reckoner/server/: Client.cpp  Client.hpp  ClientList.cpp  ClientList.hpp  PacketQueue.hpp  Server.cpp  Server.hpp  UpdateBuilder.cpp  UpdateBuilder.hpp
